@@ -27,6 +27,7 @@ SubVersion: $Id$
 	- [kevin] $2620: made zlib non-optional now that libtifiles2 requires it anyway
 	- [roms]  $2624: allow double-clicking of a ROM instead of selecting + pressing OK button
 	- [kevin] $2629: fixed GDB build with the upcoming glibc 2.7 (patch from Fedora GDB by Jan Kratochvil)
+	- [roms]  $2630: added ability to send file from command line
 
 - 16/03/2007, version 3.00
 	- [kevin] $2389: don't use \n in the breakpoint window status bar
